# cotan

./: .directory  CMakeLists.txt  CMakeLists.txt.user.ad893c0.4.9-pre1  LICENSE.md  README.md
include/cotan/: Adler32.hpp  BitArray.hpp  Crc.hpp  File.hpp  Hash.hpp  RandomGenerator.hpp  RandomInterface.hpp  RandomSTD.hpp  SRandEngine.hpp  String.hpp  Utility.hpp  Xor.hpp  XorShift.hpp  cotan.hpp
include/cotan/Utils/: Memory.hpp
include/cotan/cotan/: buildFlag.hpp  buildFlag.in
include/cotan/hash/: Adler32.hpp
include/cotan/native/random/: randomNative.hpp
include/cotan/native/random/x86/: NativeRandEngine.hpp  NativeStrongRandEngine.hpp
include/cotan/random/: F8SRandEngine.hpp  MSWSRandEngine.hpp  MT1997RandEngine.hpp  Mt19937RandEngine.hpp  RandomGenerator.hpp  RandomTimeDevice.hpp  RdRandom.hpp  SRandEngine.hpp  StringGenerator.hpp  StringRandom.hpp  XorshiftRandEngine.hpp  random.hpp
include/cotan/random/native/: native.hpp
include/cotan/random/native/x86/: NativeRandEngine.hpp  NativeStrongRandEngine.hpp
include/cotan/type/: BitArray.hpp  Hash.hpp  HashInterface.hpp  HashResult.hpp  Random.hpp  RandomInterface.hpp
include/cotan/utils/: Memory.hpp
src/: Adler32.cpp  BitArray.cpp  Crc.cpp  File.cpp  RandomSTD.cpp  SRandEngine.cpp  Utility.cpp  Xor.cpp  XorShift.cpp
src/Utils/: Memory.cpp
src/cotan/: Adler32.cpp  BitArray.cpp  Hash.cpp  HashInterface.cpp  HashResult.cpp  RandomInterface.cpp  RdRandom.cpp  StringRandom.cpp  cotan.cpp
src/native/random/x86/: NativeRandEngine.cpp  NativeStrongRandEngine.cpp
src/random/: F8SRandEngine.cpp  MSWSRandEngine.cpp  MT19937RandEngine.cpp  MT1997RandEngine.cpp  SRandEngine.cpp  XorshiftRandEngine.cpp
src/random/native/x86/: NativeRandEngine.cpp  NativeStrongRandEngine.cpp
src/utils/: Memory.cpp
tests/: CMakeLists.txt  CrcTest.hpp  UtilityTest.hpp  XorTest.hpp  adler32Test.hpp  main.cpp
